--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -40,8 +40,8 @@
         Acciones <span class="caret"></span>
       </a>
       <ul class="dropdown-menu">
-        <li><%= link_to 'Edit', edit_persona_path(@persona),class: "btn btn-default" %></li>
-        <li><%= link_to 'Back', personas_path,class: "btn btn-default" %></li>
+        <li><%= link_to 'Editar', edit_persona_path(@persona)%></li>
+        <li><%= link_to 'Regresar', personas_path%></li>
       </ul>
     </li>
 
