--- a/app/views/tipos/show.html.erb
+++ b/app/views/tipos/show.html.erb
@@ -6,4 +6,4 @@
 </p>
 
 <%= link_to 'Editar', edit_tipo_path(@tipo), class: "btn btn-default" %>
-<%= link_to 'regresar', tipos_path, class: "btn btn-default"  %>
+<%= link_to 'Regresar', tipos_path, class: "btn btn-default"  %>
