--- a/app/views/departamentos/edit.html.erb
+++ b/app/views/departamentos/edit.html.erb
@@ -1,6 +1,5 @@
-<h1><%=t("dep_editar")%></h1>
+<div class="page-header">
+  <h1>Editar Departamento</h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to "Ver", @departamento, class: "btn btn-default"  %> |
-<%= link_to "Regresar", departamentos_path, class: "btn btn-default"  %>
