--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -1,7 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= "Departamentos" %></h1>
-
+<div class="page-header">
+  <div class="pull-right">
+  <%= link_to "Nuevo Departamento", new_departamento_path, class: "btn btn-danger"  %>
+</div>
+  <h1>Departamentos</h1>
+</div>
 <div class="panel panel-default">
   <div class="panel-heading">
     Lista de Departamentos
@@ -24,9 +28,9 @@
           <tr>
             <td><%= departamento.nombre %></td>
             <th><%=Cargo.where("departamento_id=#{departamento.id} and disponible=false").length %></th>
-            <td><%= link_to '', departamento,class: "glyphicon glyphicon-user" %></td>
-            <td><%= link_to '', edit_departamento_path(departamento),class: "glyphicon glyphicon-pencil" %></td>
-            <td><%= link_to '', departamento,class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+            <td><%= link_to '', departamento,class: "fa fa-eye" %></td>
+            <td><%= link_to '', edit_departamento_path(departamento),class: "fa fa-pencil" %></td>
+            <td><%= link_to '', departamento,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
           </tr>
           <% end %>
         </tbody>
@@ -38,5 +42,3 @@
 <script>
   $('#dataTables-example').DataTable({responsive: true});
 </script>
-
-<%= link_to t("dep_nuevo"), new_departamento_path, class: "btn btn-default"  %>
