--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -1,101 +1,206 @@
 <%= simple_form_for @persona  do |f| %>
-  <% if @persona.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@persona.errors.count, "error") %> prohibited this persona from being saved:</h2>
+<% if @persona.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(@persona.errors.count, "error") %>
+    prohibited this persona from being saved:</h2>
 
-      <ul>
-      <% @persona.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-<div class"col-xs-offset-12"><h3>Datos Personales</h3></div>
-  <div class="col-xs-6 form-group">
-    <%= f.label :cedula %><br>
-    <span class="col-xs-2"><%= f.select(:tipo_de_cedula, options_for_select($dic["tipos_de_cedula"], @persona.tipo_de_cedula),{},{:class =>"form-control"})  %></span>
-  <span class="col-xs-10"> <%= f.text_field :cedula ,:class => "form-control" %></span>
-  </div>
-    <div class="col-xs-6 form-group">
-      <%= f.label :nombres %><br>
-  <%= f.file_field  :avatar %>
+  <ul>
+    <% @persona.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
 </div>
-  <div class="col-xs-6 form-group">
+<% end %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Datos Personales
+  </div>
+  <div class="panel-body">
+    <div class="col-xs-6 ">
+      <%= f.label :cedula%><br>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-user"></span>
+        </span>
+        <span class="input-group-addon">
+          <%= f.select(:tipo_de_cedula, options_for_select($dic["tipos_de_cedula"], @persona.tipo_de_cedula),{},{:class =>""})  %>
+        </span>
+        <%= f.text_field :cedula ,:class => "form-control" %>
+      </div>
+    </div>
+    <div class="col-xs-6 form-group">
+      <%= f.label "Fotografia" %><br>
+      <div class="form-group input-group">
 
-    <%= f.label :nombres %><br>
-    <%= f.text_field :nombres,:class => "form-control" %></div>
+        <span class="input-group-addon">
+          <span class="fa fa-image"></span>
+        </span>
+        <%= f.file_field  :avatar, class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="col-xs-6 form-group">
-    <%= f.label :apellidos %><br>
-    <%= f.text_field :apellidos ,:class => "form-control" %>
-  </div>
-  <div class="col-xs-6 form-group">
-    <%= f.label :telefono_fijo %><br>
-    <%= f.telephone_field :telefono_fijo ,:class => "form-control" %>
-  </div>
-  <div class="col-xs-6 form-group">
-    <%= f.label :telefono_movil %><br>
-    <%= f.telephone_field :telefono_movil ,:class => "form-control" %>
-  </div>
-  <div class="col-xs-6 form-group">
-    <%= f.label :correo %><br>
-    <%= f.email_field :correo ,:class => "form-control" %>
+    <div class="col-xs-6">
+      <%= f.label :nombres %><br>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-align-justify"></span>
+        </span>
+      <%= f.text_field :nombres,:class => "form-control" %></div>
+    </div>
+    <div class="col-xs-6">
+      <%= f.label :apellidos %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-align-justify"></span>
+        </span>
+      <%= f.text_field :apellidos ,:class => "form-control" %>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <%= f.label :telefono_fijo %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-phone"></span>
+        </span>
+        <%= f.telephone_field :telefono_fijo ,:class => "form-control" %>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <%= f.label :telefono_movil %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-mobile"></span>
+        </span>
+        <%= f.telephone_field :telefono_movil ,:class => "form-control" %>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <%= f.label :correo %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">@</span>
+        <%= f.email_field :correo ,:class => "form-control" %>
+      </div>
+
+    </div>
+
+    <div class="col-xs-6">
+      <%= f.label :fecha_de_nacimiento %><br>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-calendar"></span>
+        </span>
+        <%= f.date_field :fecha_de_nacimiento ,:class => "form-control" %>
+      </div>
+    </div>
+
+    <div class="col-xs-6">
+      <%= f.label :sexo %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-venus-mars"></span>
+        </span>
+      <%= f.select(:sexo, options_for_select($dic["sexos"],@persona.sexo),{},:class =>"form-control")  %>
+    </div>
   </div>
 
-  <div class="col-xs-6 form-group">
-    <%= f.label :fecha_de_nacimiento %><br>
-    <%= f.date_field :fecha_de_nacimiento ,:class => "form-control" %>
+    <div class="col-xs-6 form-group">
+      <%= f.label :status %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-check"></span>
+        </span>
+      <%= f.select(:status, options_for_select($dic["status"], @persona.status),{},:class =>"form-control")  %>
+    </div>
   </div>
-
-  <div class="col-xs-6 form-group">
-    <%= f.label :sexo %><br>
-    <%= f.select(:sexo, options_for_select($dic["sexos"],@persona.sexo),{},:class =>"form-control")  %>
+    <div class="col-xs-6">
+      <%= f.label :cargo_id %><br>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-briefcase"></span>
+        </span>
+        <% if f.object.cargo_id=f.object.cargo_id ? f.object.cargo_id : 0%>
+        <%= f.select(:cargo_id, options_for_select(Cargo.all.where("disponible=true or id=#{f.object.cargo_id}").map{|s|[s.nombre, s.id]}, params[:cargo_id]),{},:class =>"form-control")  %>
+        <%end%>
+      </div>
+    </div>
+    <div class="col-xs-6 form-group">
+      <%= f.label :cuenta %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-university"></span>
+        </span>
+        <%= f.number_field :cuenta ,:class => "form-control" %>
+      </div>
+    </div>
+    <div class="col-xs-6 form-group">
+      <%= f.label :cargas_familiares %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-users"></span>
+        </span>
+        <%= f.number_field :cargas_familiares ,:class => "form-control" %>
+      </div>
+    </div>
+    <div class="col-xs-6 form-group">
+      <%= f.label :direccion %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-home"></span>
+        </span>
+        <%= f.text_area :direccion ,:class => "form-control" %>
+      </div>
+    </div>
   </div>
-  <div class="col-xs-6 form-group">
-    <%= f.label :status %><br>
-    <%= f.select(:status, options_for_select($dic["status"], @persona.status),{},:class =>"form-control")  %>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Contrato
   </div>
-  <div class="col-xs-6 form-group">
-    <%= f.label :cargo_id %><br>
-    <% if f.object.cargo_id=f.object.cargo_id ? f.object.cargo_id : 0%>
-    <%= f.select(:cargo_id, options_for_select(Cargo.all.where("disponible=true or id=#{f.object.cargo_id}").map{|s|[s.nombre, s.id]}, params[:cargo_id]),{},:class =>"form-control")  %>
-<%end%>
-  </div>
-  <div class="col-xs-6 form-group">
-    <%= f.label :cuenta %><br>
-    <%= f.number_field :cuenta ,:class => "form-control" %>
-  </div>
-  <div class="col-xs-6 form-group">
-    <%= f.label :cargas_familiares %><br>
-    <%= f.number_field :cargas_familiares ,:class => "form-control" %>
-  </div>
-  <div class="col-xs-6 form-group">
-    <%= f.label :direccion %><br>
-    <%= f.text_area :direccion ,:class => "form-control" %>
-  </div>
-
-  <div class"col-xs-offset-12"><h3>Contrato</h3></div>
-  <%= f.simple_fields_for :contrato  do |contrato_builder|  %>
-    <div class="col-xs-6 form-group" >
+  <div class="panel-body">
+    <%= f.simple_fields_for :contrato  do |contrato_builder|  %>
+    <div class="col-xs-6">
       <%= contrato_builder.label :tipo_de_contrato %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-file-text-o"></span>
+        </span>
       <%= contrato_builder.select(:tipo_de_contrato, options_for_select($dic["tipos_de_contrato"], @persona.contrato.tipo_de_contrato),{},:class =>"form-control" ) %>
     </div>
-    <div class="col-xs-6 form-group" >
-      <%= contrato_builder.label :fecha_inicio %>
-      <%= contrato_builder.date_field :fecha_inicio,:class => "form-control" %>
-    </div>
-    <div class="col-xs-6 form-group" >
-      <%= contrato_builder.label :fecha_fin %>
-      <%= contrato_builder.date_field :fecha_fin,:class => "form-control" %>
-    </div>
-    <div class="col-xs-6 form-group" >
-      <%= contrato_builder.label :sueldo_externo %>
-      <%= contrato_builder.text_field :sueldo_externo,:class => "form-control" %>
-    </div>
-    <% end %>
-  <div class="actions col-xs-12 form-group">
-    <%= f.submit :class => "btn btn-default"  %>
-    <%= link_to 'Back', personas_path ,class: "btn btn-default"%>
-
   </div>
+    <div class="col-xs-6">
+      <%= contrato_builder.label :fecha_inicio %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-calendar"></span>
+        </span>
+        <%= contrato_builder.date_field :fecha_inicio,:class => "form-control" %>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <%= contrato_builder.label :fecha_fin %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-calendar"></span>
+        </span>
+        <%= contrato_builder.date_field :fecha_fin,:class => "form-control" %>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <%= contrato_builder.label :sueldo_externo %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-money"></span>
+        </span>
+        <%= contrato_builder.text_field :sueldo_externo,:class => "form-control" %>
+        <span class="input-group-addon">BsF.</span>
+      </div>
+    </div>
+  </div>
+</div>
+<% end %>
+<div class="col-xs-12 actions"><br>
+  <%= f.submit "Guardar", :class => "btn btn-primary btn-md boton" %>
+  <%= link_to raw('<i class="fa fa-arrow-circle-left"></i> Regresar'), personas_path ,class: "btn btn-default btn-md boton"%>
+
+</div>
 <% end %>
