--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Listing Personas</h1>
+<h1>Empleados</h1>
 <div class="panel panel-default">
   <div class="panel-heading">
-    Advanced Tables
+    Lista de Empleados
   </div>
   <div class="panel-body">
     <div class="table-responsive">
@@ -34,9 +34,9 @@
             <td><%= $dic["status"].key(persona.status) %></td>
             <td><%= persona.cargo.nombre %></td>
             <td><%= persona.cargo.sueldos.last.monto %></td>
-            <td><%= link_to '', persona,class: "glyphicon glyphicon-user" %></td>
-            <td><%= link_to '', edit_persona_path(persona),class: "glyphicon glyphicon-pencil" %></td>
-            <td><%= link_to '', persona,class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Estas seguro?' } %></td>
+            <td><%= link_to '', persona,class: "fa fa-eye" %></td>
+            <td><%= link_to '', edit_persona_path(persona),class: "fa fa-pencil" %></td>
+            <td><%= link_to '', persona,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
 
           </tr>
           <% end %>
@@ -51,4 +51,4 @@
   $('#dataTables-example').DataTable({responsive: true});
 </script>
 
-<%= link_to 'New Persona', new_persona_path %>
+<%= link_to 'Nuevo Empleado', new_persona_path, class: "btn btn-default" %>
