--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -1,4 +1,10 @@
-<h1>Empleados</h1>
+
+<div class="page-header">
+  <div class="pull-right">
+    <%= link_to "Contratar Persona", new_persona_path, class: "btn btn-danger"  %>
+  </div>
+  <h1>Empleados</h1>
+</div>
 <div class="panel panel-default">
   <div class="panel-heading">
     Lista de Empleados
@@ -37,7 +43,6 @@
             <td><%= link_to '', persona,class: "fa fa-eye" %></td>
             <td><%= link_to '', edit_persona_path(persona),class: "fa fa-pencil" %></td>
             <td><%= link_to '', persona,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
-
           </tr>
           <% end %>
         </tbody>
@@ -47,8 +52,5 @@
   </div>
 </div>
 <script>
-
   $('#dataTables-example').DataTable({responsive: true});
 </script>
-
-<%= link_to 'Nuevo Empleado', new_persona_path, class: "btn btn-default" %>
