--- a/app/views/cargos/index.html.erb
+++ b/app/views/cargos/index.html.erb
@@ -1,37 +1,48 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Cargo', new_cargo_path %>
-<h1>Listing Cargos</h1>
+<div class="page-header">
+  <div class="pull-right">
+    <%= link_to "Nuevo Cargo", new_cargo_path, class: "btn btn-danger"  %>
+  </div>
+  <h1>Cargos</h1>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Lista de Cargos
+  </div>
+  <div class="panel-body">
+    <div class="table-responsive">
+      <table class="table table-bordered table-condensed table-responsive table-bordered">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>
+              <%= link_to "Departamento",departamentos_path%></th>
+            <th>Sueldo</th>
+            <th>Tipo</th>
+            <th>Disponible</th>
+            <th colspan="3">Acciones</th>
+          </tr>
+        </thead>
 
-<table class="table table-hover table-responsive table-condensed table-bordered">
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th> <%= link_to "Departamento",departamentos_path%></th>
-      <th>Sueldo</th>
-      <th>Tipo</th>
-      <th>Disponible</th>
-      <th colspan="3">Acciones</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @cargos.each do |cargo| %>
-      <tr>
-        <td><%= cargo.nombre %></td>
-        <td><%= cargo.departamento.nombre %></td>
-        <td><%= cargo.sueldos.last.monto %></td>
-        <th><%= cargo.tipo.nombre %></th>
-        <th><%if cargo.disponible %>
-          <span class="glyphicon glyphicon-ok"></span>
-        <%else%>
-          <span class="glyphicon glyphicon-remove"></span>
-        <%end%></th>
-        <td><%= link_to 'Show', cargo %></td>
-        <td><%= link_to 'Edit', edit_cargo_path(cargo) %></td>
-        <td><%= link_to 'Destroy', cargo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+        <tbody>
+          <% @cargos.each do |cargo| %>
+          <tr>
+            <td><%= cargo.nombre %></td>
+            <td><%= cargo.departamento.nombre %></td>
+            <td><%= cargo.sueldos.last.monto %></td>
+            <th><%= cargo.tipo.nombre %></th>
+            <th><%if cargo.disponible %>
+              <span class="glyphicon glyphicon-ok"></span>
+              <%else%>
+              <span class="glyphicon glyphicon-remove"></span>
+              <%end%></th>
+              <td><%= link_to '', cargo,class: "fa fa-eye" %></td>
+              <td><%= link_to '', edit_cargo_path(cargo),class: "fa fa-pencil" %></td>
+              <td><%= link_to '', cargo,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
