--- a/app/views/conceptos/edit.html.erb
+++ b/app/views/conceptos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Concepto</h1>
+<div class="page-header">
+  <h1>Editar Concepto</h1>
+</div>
+
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @concepto %> |
-<%= link_to 'Back', conceptos_path %>
