--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -1,50 +1,195 @@
-
-
 <div class="col-sm-12 page-header">
-  <div class="col-sm-9 "><h1><%= (@persona.nombres + " " + @persona.apellidos).upcase%></h1>
+  <div class="col-sm-2"><%= image_tag @persona.avatar.url(:thumb), class:"img-circle  img-rounded " %></div>
+  <div class="col-sm-10 ">
+    <div class="col-sm-8">
+      <h1><%= (@persona.nombres + " " + @persona.apellidos).upcase%></h1>
+    </div>
 
-    <p></p>
+    <div class="col-sm-4 pull-right ">
+      <%= link_to 'Editar', edit_persona_path(@persona), class:"btn btn-danger btn-md"%>
+      <%= link_to 'Regresar', personas_path, class:"btn btn-default btn-md"%>
+    </div>
   </div>
-  <div class"pull-right col-sm-3 thumbnail"><%= image_tag @persona.avatar.url(:thumb), class:"img-circle  img-rounded " %></div>
+
 </div>
 <div class="col-sm-4">
-            <!--left col-->
-            <ul class="list-group">
-                <li class="list-group-item text-muted" contenteditable="false">Profile</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">status</strong></span> <%= $dic["status"].key(@persona.status) %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Departamento</strong></span> <%= @persona.cargo.departamento.nombre %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Cargo</strong></span> <%= @persona.cargo.nombre%></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Sueldp</strong></span> <%= @persona.cargo.sueldos.last.monto%></li>
+  <!--left col-->
+  <ul class="list-group">
+    <li class="list-group-item text-muted" contenteditable="false">Profile</li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">status</strong>
+      </span>
+      <%= $dic["status"].key(@persona.status) %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Departamento</strong>
+      </span>
+      <%= @persona.cargo.departamento.nombre %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Cargo</strong>
+      </span>
+      <%= @persona.cargo.nombre%></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Sueldp</strong>
+      </span>
+      <%= @persona.cargo.sueldos.last.monto%></li>
 
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Cedula</strong></span> <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Nombres</strong></span> <%= @persona.nombres %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Apellidos</strong></span> <%= @persona.apellidos %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Telefonos</strong></span><%= @persona.telefono_fijo %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class=""></strong></span> <%= @persona.telefono_movil %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Correo</strong></span> <%= @persona.correo %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Cuenta</strong></span> <%= @persona.cuenta %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Cedula</strong>
+      </span>
+      <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Nombres</strong>
+      </span>
+      <%= @persona.nombres %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Apellidos</strong>
+      </span>
+      <%= @persona.apellidos %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Telefonos</strong>
+      </span><%= @persona.telefono_fijo %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class=""></strong>
+      </span>
+      <%= @persona.telefono_movil %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Correo</strong>
+      </span>
+      <%= @persona.correo %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Cuenta</strong>
+      </span>
+      <%= @persona.cuenta %></li>
 
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Fecha de nacimiento</strong></span> <%= @persona.fecha_de_nacimiento %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Direccion</strong></span><%= @persona.direccion %></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Carga Familiar</strong></span> <%= @persona.cargas_familiares %></li>
-                  <li class="list-group-item text-right"><span class="pull-left"><strong class="">Sexo</strong></span><%= $dic["sexos"].key(@persona.sexo) %></li>
-              </ul>
-            </div>
-<div class="col-sm-8">
-  <ul class="nav nav-tabs">
-  <li role="presentation" class="active"><a href="#">Asignaciones</a></li>
-  <li role="presentation"><a href="#">Dededucciones</a></li>
-  <li role="presentation"><a href="#">Total</a></li>
-  <li role="presentation" class="dropdown pull-right">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-        Acciones <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu">
-        <li><%= link_to 'Editar', edit_persona_path(@persona)%></li>
-        <li><%= link_to 'Regresar', personas_path%></li>
-      </ul>
-    </li>
-
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Fecha de nacimiento</strong>
+      </span>
+      <%= @persona.fecha_de_nacimiento %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Direccion</strong>
+      </span><%= @persona.direccion %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Carga Familiar</strong>
+      </span>
+      <%= @persona.cargas_familiares %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Sexo</strong>
+      </span><%= $dic["sexos"].key(@persona.sexo) %></li>
   </ul>
-</ul>
+</div>
+<div class="col-sm-8">
+  <%
+  @asignaciones=@persona.cargo.tipo.conceptos.where(tipo_de_concepto: 0)
+  @deducciones=@persona.cargo.tipo.conceptos.where(tipo_de_concepto: 1)
+  @MONTO= @persona.cargo.sueldos.last.monto
+  @total_asignaciones=0
+  @total_deducciones=0
+%>
+  <div class="col-sm-12">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        Conceptos
+      </div>
+      <div class="panel-body">
+        <div class="col-sm-12">
+          <div class="panel panel-success">
+            <div class="panel-heading">
+              Asignaciones
+            </div>
+            <div class="panel-body">
+              <div class="table-responsive">
+
+                <table class="table table-hover table-bordered table-condensed table-striped">
+                  <thead>
+                    <tr>
+                      <th>Nombre</th>
+                      <th>Monto</th>
+                    </tr>
+                  </thead>
+
+                  <tbody>
+                    <% @asignaciones.each do |c| %>
+
+                    <tr>
+                      <td><%= c.nombre%></td>
+                      <% @valor=eval(c.formula).to_d
+@total_asignaciones+=@valor
+              %>
+                      <td><%=@valor.to_s+"  BsF."  %></td>
+                    </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+
+              </div>
+            </div>
+            <div class="panel-footer">
+              Total de Asignaciones
+              <div class="pull-right"><%= @total_asignaciones.to_s+"  BsF." %></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-12">
+          <div class="panel panel-danger">
+            <div class="panel-heading">
+              Deducciones
+            </div>
+            <div class="panel-body">
+              <div class="table-responsive">
+
+                <table class="table table-hover table-bordered table-condensed table-striped">
+                  <thead>
+                    <tr>
+                      <th>Nombre</th>
+                      <th>Monto</th>
+                    </tr>
+                  </thead>
+
+                  <tbody>
+
+                    <% @valor=0
+             @deducciones.each do |c| %>
+
+                    <tr>
+                      <td><%= c.nombre%></td>
+                      <% @valor=eval(c.formula).to_d
+@total_deducciones+=@valor
+              %>
+                      <td><%=@valor.to_s+"  BsF."  %></td>
+                    </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="panel-footer">
+              Total de Asignaciones
+              <div class="pull-right"><%= @total_deducciones.to_s+"  BsF." %></div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="panel-footer">
+        Total
+        <div class="pull-right"><%= (@total_asignaciones-@total_deducciones).to_s+"  BsF." %></div>
+      </div>
+    </div>
+  </div>
 </div>
