--- a/app/views/cargos/index.html.erb
+++ b/app/views/cargos/index.html.erb
@@ -32,13 +32,13 @@
             <td><%= cargo.sueldos.last.monto %></td>
             <th><%= cargo.tipo.nombre %></th>
             <th><%if cargo.disponible %>
-              <span class="glyphicon glyphicon-ok"></span>
+              <span class="fa fa-check"></span>
               <%else%>
-              <span class="glyphicon glyphicon-remove"></span>
+              <span class="fa fa-remove"></span>
               <%end%></th>
-              <td><%= link_to '', cargo,class: "fa fa-eye" %></td>
-              <td><%= link_to '', edit_cargo_path(cargo),class: "fa fa-pencil" %></td>
-              <td><%= link_to '', cargo,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+              <td><%= link_to '', cargo,class: "fa fa-eye" %>
+              <%= link_to '', edit_cargo_path(cargo),class: "fa fa-pencil" %>
+              <%= link_to '', cargo,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
           </tr>
           <% end %>
         </tbody>
