--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -130,7 +130,7 @@
                       <% @valor=eval(c.formula).to_d
 @total_asignaciones+=@valor
               %>
-                      <td><%=@valor.to_s+"  BsF."  %></td>
+                      <td><%=@valor.to_s+"  Bs."  %></td>
                     </tr>
                     <% end %>
                   </tbody>
@@ -140,7 +140,7 @@
             </div>
             <div class="panel-footer">
               Total de Asignaciones
-              <div class="pull-right"><%= @total_asignaciones.to_s+"  BsF." %></div>
+              <div class="pull-right"><%= @total_asignaciones.to_s+"  Bs." %></div>
             </div>
           </div>
         </div>
