validaciones y cambios en css

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -39,11 +39,11 @@ font-size: 16px;">
         </li>
 
         <li>
-          <%= link_to raw("<i class=\"fa fa-home fa-3x\"></i> INICIO"), welcome_index_path%>
+          <%= link_to raw("<i class=\"fa fa-home fa-2x\"></i> INICIO"), welcome_index_path%>
         </li>
         <li>
           <a href="#">
-            <i class="fa fa-building fa-3x"></i>
+            <i class="fa fa-building fa-2x"></i>
             ESTRUCTURAS<span class="fa arrow"></span>
           </a>
           <ul class="nav nav-second-level">
@@ -59,19 +59,19 @@ font-size: 16px;">
           </ul>
         </li>
         <li>
-            <%= link_to raw("<i class=\"fa fa-briefcase fa-3x\"></i> CARGOS"), cargos_path%>
+            <%= link_to raw("<i class=\"fa fa-briefcase fa-2x\"></i> CARGOS"), cargos_path%>
         </li>
         <li >
-          <%= link_to raw("<i class=\"fa fa-users fa-3x\"></i> EMPLEADOS"), personas_path%>
+          <%= link_to raw("<i class=\"fa fa-users fa-2x\"></i> EMPLEADOS"), personas_path%>
         </li>
         <li >
-          <%= link_to raw("<i class=\"fa fa-money fa-3x\"></i> CONCEPTOS"), conceptos_path%>
+          <%= link_to raw("<i class=\"fa fa-money fa-2x\"></i> CONCEPTOS"), conceptos_path%>
         </li>
 
 
         <li>
           <a href="#">
-            <i class="fa fa-sitemap fa-3x"></i>
+            <i class="fa fa-sitemap fa-2x"></i>
             Multi-Level Dropdown<span class="fa arrow"></span>
           </a>
           <ul class="nav nav-second-level">
@@ -102,7 +102,7 @@ font-size: 16px;">
         </li>
         <li >
           <a class="active-menu" href="blank.html">
-            <i class="fa fa-square-o fa-3x"></i>
+            <i class="fa fa-square-o fa-2x"></i>
             Blank Page</a>
         </li>
       </ul>
@@ -110,3 +110,4 @@ font-size: 16px;">
     </div>
 
   </nav>
+  </div>
