--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -15,7 +15,7 @@
 <div class="col-sm-4">
   <!--left col-->
   <ul class="list-group">
-    <li class="list-group-item text-muted" contenteditable="false">Profile</li>
+    <li class="list-group-item text-muted" contenteditable="false">Perfil</li>
     <li class="list-group-item text-right">
       <span class="pull-left">
         <strong class="">status</strong>
@@ -101,7 +101,7 @@
   @total_deducciones=0
 %>
   <div class="col-sm-12">
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
       <div class="panel-heading">
         Conceptos
       </div>
