--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -1,14 +1,19 @@
-<%= simple_form_for @persona  do |f| %>
+<%= form_for(@persona) do |f| %>
 <% if @persona.errors.any? %>
 <div id="error_explanation">
-  <h2><%= pluralize(@persona.errors.count, "error") %>
-    prohibited this persona from being saved:</h2>
 
-  <ul>
-    <% @persona.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
+
+    <%
+ messages="<h2>"+@persona.errors.count.to_s+" errores al guardar</h2>"
+    @persona.errors.full_messages.each do |message|
+ messages<<"<li>"<<message<<"</li>"
+
+ end %>
+    <div class="alert alert-danger alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <%= raw(messages)%>
+    </div>
+
 </div>
 <% end %>
 <div class="panel panel-default">
@@ -17,7 +22,7 @@
   </div>
   <div class="panel-body">
     <div class="col-xs-6 ">
-      <%= f.label :cedula%><br>
+      <%= f.label :cedula%>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-user"></span>
@@ -25,7 +30,7 @@
         <span class="input-group-addon">
           <%= f.select(:tipo_de_cedula, options_for_select($dic["tipos_de_cedula"], @persona.tipo_de_cedula),{},{:class =>""})  %>
         </span>
-        <%= f.text_field :cedula ,:class => "form-control" %>
+        <%= f.text_field :cedula ,:class => "form-control",label: false, error: "Campo obligarotio." %>
       </div>
     </div>
     <div class="col-xs-6 form-group">
@@ -40,7 +45,7 @@
     </div>
 
     <div class="col-xs-6">
-      <%= f.label :nombres %><br>
+      <%= f.label :nombres %>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-align-justify"></span>
@@ -84,7 +89,7 @@
     </div>
 
     <div class="col-xs-6">
-      <%= f.label :fecha_de_nacimiento %><br>
+      <%= f.label :fecha_de_nacimiento %>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-calendar"></span>
@@ -199,7 +204,7 @@
 </div>
 <% end %>
 <div class="col-xs-12 actions"><br>
-  <%= f.submit "Guardar", :class => "btn btn-primary btn-md boton" %>
+  <%= f.button :submit, :class => "btn btn-primary btn-md boton" %>
   <%= link_to raw('<i class="fa fa-arrow-circle-left"></i> Regresar'), personas_path ,class: "btn btn-default btn-md boton"%>
 
 </div>
