--- a/app/views/departamentos/_form.html.erb
+++ b/app/views/departamentos/_form.html.erb
@@ -28,8 +28,8 @@
     </div>
 
     <div class="actions col-md-12">
-      <%= f.submit "Guardar", class:  "btn bnt-default" %>
-      <%= link_to "Regresar", departamentos_path, class: "btn btn-default"  %>
+      <%= f.submit "Guardar", class:  "btn btn-primary btn-md boton" %>
+      <%= link_to raw('<i class="fa fa-arrow-circle-left"></i> Regresar'), departamentos_path, class: "btn btn-default btn-md boton"  %>
     </div>
   </div>
 </div>
