--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -17,7 +17,7 @@
           <tr>
             <th><%=t("nombre")%></th>
             <th>Personas</th>
-            <th colspan="3">Acciones</th>
+            <th>Acciones</th>
           </tr>
         </thead>
 
