--- a/app/views/dependencias/index.html.erb
+++ b/app/views/dependencias/index.html.erb
@@ -15,7 +15,7 @@
         <thead>
           <tr>
             <th>Nombre</th>
-            <th colspan="3">Acciones</th>
+            <th>Acciones</th>
           </tr>
 
         </thead>
