--- a/app/views/dependencias/show.html.erb
+++ b/app/views/dependencias/show.html.erb
@@ -2,8 +2,9 @@
 
 <p>
   <strong>Nombre:</strong>
-  <%= @dependencia.nombre %>
+  <%= @dependencia.nombre.upcase %>
 </p>
-
-<%= link_to 'Editar', edit_dependencia_path(@dependencia), class: "btn btn-default" %>
-<%= link_to 'Regresar', dependencias_path, class: "btn btn-default" %>
+<div class="col-xs-12 actions"><br>
+  <%= link_to raw('<i class="fa fa-pencil"></i> Editar'), edit_dependencia_path(@dependencia), class: "btn btn-success boton" %>
+  <%= link_to raw('<i class="fa fa-arrow-circle-left"></i> Regresar'), dependencias_path, class: "btn btn-default boton" %>
+</div>
