--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -2,17 +2,19 @@
 <% if @persona.errors.any? %>
 <div id="error_explanation">
 
-
-    <%
+  <%
  messages="<h2>"+@persona.errors.count.to_s+" errores al guardar</h2>"
     @persona.errors.full_messages.each do |message|
  messages<<"<li>"<<message<<"</li>"
 
  end %>
-    <div class="alert alert-danger alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-      <%= raw(messages)%>
-    </div>
+  <div class="alert alert-danger alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert">
+      <span aria-hidden="true">&times;</span>
+      <span class="sr-only">Close</span>
+    </button>
+    <%= raw(messages)%>
+  </div>
 
 </div>
 <% end %>
@@ -50,7 +52,7 @@
         <span class="input-group-addon">
           <span class="fa fa-align-justify"></span>
         </span>
-      <%= f.text_field :nombres,:class => "form-control" %></div>
+        <%= f.text_field :nombres,:class => "form-control" %></div>
     </div>
     <div class="col-xs-6">
       <%= f.label :apellidos %>
@@ -58,7 +60,7 @@
         <span class="input-group-addon">
           <span class="fa fa-align-justify"></span>
         </span>
-      <%= f.text_field :apellidos ,:class => "form-control" %>
+        <%= f.text_field :apellidos ,:class => "form-control" %>
       </div>
     </div>
     <div class="col-xs-6">
@@ -104,9 +106,9 @@
         <span class="input-group-addon">
           <span class="fa fa-venus-mars"></span>
         </span>
-      <%= f.select(:sexo, options_for_select($dic["sexos"],@persona.sexo),{},:class =>"form-control")  %>
+        <%= f.select(:sexo, options_for_select($dic["sexos"],@persona.sexo),{},:class =>"form-control")  %>
+      </div>
     </div>
-  </div>
 
     <div class="col-xs-6 form-group">
       <%= f.label :status %>
@@ -114,9 +116,9 @@
         <span class="input-group-addon">
           <span class="fa fa-check"></span>
         </span>
-      <%= f.select(:status, options_for_select($dic["status"], @persona.status),{},:class =>"form-control")  %>
+        <%= f.select(:status, options_for_select($dic["status"], @persona.status),{}, :class =>"form-control")  %>
+      </div>
     </div>
-  </div>
     <div class="col-xs-6">
       <%= f.label :cargo_id %><br>
       <div class="form-group input-group">
@@ -124,7 +126,7 @@
           <span class="fa fa-briefcase"></span>
         </span>
         <% if f.object.cargo_id=f.object.cargo_id ? f.object.cargo_id : 0%>
-        <%= f.select(:cargo_id, options_for_select(Cargo.all.where("disponible=true or id=#{f.object.cargo_id}").map{|s|[s.nombre, s.id]}, params[:cargo_id]),{},:class =>"form-control")  %>
+        <%= f.select(:cargo_id, options_for_select(Cargo.all.where("disponible=true or id=#{f.object.cargo_id}").map{|s|[s.nombre, s.id]}, params[:cargo_id]),{}, class: 'form-control')  %>
         <%end%>
       </div>
     </div>
@@ -169,9 +171,9 @@
         <span class="input-group-addon">
           <span class="fa fa-file-text-o"></span>
         </span>
-      <%= contrato_builder.select(:tipo_de_contrato, options_for_select($dic["tipos_de_contrato"], @persona.contrato.tipo_de_contrato),{},:class =>"form-control" ) %>
+        <%= contrato_builder.select(:tipo_de_contrato, options_for_select($dic["tipos_de_contrato"], @persona.contrato.tipo_de_contrato),{},:class =>"form-control" ) %>
+      </div>
     </div>
-  </div>
     <div class="col-xs-6">
       <%= contrato_builder.label :fecha_inicio %>
       <div class="form-group input-group">
@@ -204,7 +206,7 @@
 </div>
 <% end %>
 <div class="col-xs-12 actions"><br>
-  <%= f.button :submit, :class => "btn btn-primary btn-md boton" %>
+  <%= f.submit "Guardar", class:  "btn btn-primary btn-md boton" %>
   <%= link_to raw('<i class="fa fa-arrow-circle-left"></i> Regresar'), personas_path ,class: "btn btn-default btn-md boton"%>
 
 </div>
