--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -15,17 +15,15 @@
       <table class="table table-hover table-bordered table-condensed table-striped">
         <thead>
           <tr>
-            <th>Cedula</th>
-            <th>Nombres</th>
-            <th>Apellidos</th>
-            <th>Fecha de nacimiento</th>
-            <th>Correo</th>
-            <th>Status</th>
-            <th>Cargo</th>
-            <th>Sueldo</th>
-            <th>Ver</th>
-            <th>Editar</th>
-            <th>Eliminar</th>
+            <th class= "actions">Cedula</th>
+            <th class= "actions">Nombres</th>
+            <th class= "actions">Apellidos</th>
+            <th class= "actions">Fecha de nacimiento</th>
+            <th class= "actions">Correo</th>
+            <th class= "actions">Status</th>
+            <th class= "actions">Cargo</th>
+            <th class= "actions">Sueldo</th>
+            <th class= "actions">Acciones</th>
           </tr>
         </thead>
 
@@ -40,9 +38,9 @@
             <td><%= $dic["status"].key(persona.status) %></td>
             <td><%= persona.cargo.nombre %></td>
             <td><%= persona.cargo.sueldos.last.monto %></td>
-            <td><%= link_to '', persona,class: "fa fa-eye" %></td>
-            <td><%= link_to '', edit_persona_path(persona),class: "fa fa-pencil" %></td>
-            <td><%= link_to '', persona,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+            <td class= "actions"><%= link_to '', persona,class: "fa fa-eye" %>
+            <%= link_to '', edit_persona_path(persona),class: "fa fa-pencil" %>
+            <%= link_to '', persona,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
           </tr>
           <% end %>
         </tbody>
