--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -4,7 +4,7 @@
   <div class="pull-right">
     <%= link_to 'Nuevo Tipo', new_tipo_path, class: "btn btn-danger btn-md" %>
   </div>
-  <h1>Tipos</h1>
+  <h1>Tipos de Nomina</h1>
 </div>
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -17,7 +17,7 @@
         <thead>
           <tr>
             <th>Nombre</th>
-            <th colspan="3">Acciones</th>
+            <th>Acciones</th>
           </tr>
         </thead>
 
