--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -64,12 +64,9 @@
 <li class="list-group-item text-right">
   <span class="pull-left">
     <strong class="">Telefonos</strong>
-  </span><%= @persona.telefono_fijo %></li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class=""></strong>
-  </span>
-  <%= @persona.telefono_movil %></li>
+  </span><%= @persona.telefono_fijo %><br>
+  <%= @persona.telefono_movil %></li></li>
+
 <li class="list-group-item text-right">
   <span class="pull-left">
     <strong class="">Correo</strong>
@@ -90,11 +87,6 @@
   <span class="pull-left">
     <strong class="">Direccion</strong>
   </span><%= @persona.direccion %></li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Carga Familiar</strong>
-  </span>
-  <%= @persona.cargas_familiares %></li>
 <li class="list-group-item text-right">
   <span class="pull-left">
     <strong class="">Sexo</strong>
