--- a/app/views/conceptos/_form.html.erb
+++ b/app/views/conceptos/_form.html.erb
@@ -18,7 +18,7 @@
     <span class="input-group-addon">
       <span class="fa fa-align-justify"></span>
     </span>
-    <%= f.text_field :nombre, class: "form-control" %>
+    <%= f.text_field :nombre, class: "form-control", REQUIRED: "", autofocus: "" %>
   </div>
 </div>
 
@@ -28,7 +28,7 @@
     <span class="input-group-addon">
       <span class="fa fa-calendar-o"></span>
     </span>
-    <%= f.select(:modalidad_de_pago , options_for_select($dicc["modos_de_pago"],@concepto.modalidad_de_pago),{},:class =>"form-control")  %>
+    <%= f.select(:modalidad_de_pago , options_for_select($dicc["modos_de_pago"],@concepto.modalidad_de_pago),{include_blank:'Seleccione una Modalidad de Pago...'},:class =>"form-control", REQUIRED: "")  %>
   </div>
 </div>
 <div class="col-xs-6">
@@ -38,7 +38,7 @@
       <span class="fa fa-arrow-up"></span>
       <span class="fa fa-arrow-down"></span>
     </span>
-    <%= f.select(:tipo_de_concepto , options_for_select($dicc["tipos_de_conceptos"],@concepto.tipo_de_concepto),{},:class =>"form-control")  %>
+    <%= f.select(:tipo_de_concepto , options_for_select($dicc["tipos_de_conceptos"],@concepto.tipo_de_concepto),{include_blank:'Seleccione Tipo de Concepto...'},:class =>"form-control", REQUIRED: "")  %>
   </div>
 
 </div>
@@ -48,7 +48,7 @@
     <span class="input-group-addon">
       <span class="fa fa-calculator"></span>
     </span>
-    <%= f.text_area :formula, class: "form-control" %>
+    <%= f.text_area :formula, class: "form-control", REQUIRED: ""%>
   </div>
 </div>
 <div class="col-xs-12">
