--- a/app/views/tipos/_form.html.erb
+++ b/app/views/tipos/_form.html.erb
@@ -20,7 +20,7 @@
 
       <div class="form-group col-md-12">
         <%= f.label :nombre %><br>
-        <%= f.text_field :nombre, class: "form-control" %>
+        <%= f.text_field :nombre, class: "form-control", REQUIRED: "", autofocus: "" %>
       </div>
       <div class="actions col-md-12">
         <%= f.submit "Guardar", class:"btn btn-default" %>
